--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Daffa Julistio/span></p>
-                        <p><span class="title-s">Profile: </span> <span>full stack web developer</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Mahasiswa Teknik Komputer PNP</span></p>
                         <p><span class="title-s">Email: </span> <span>daffa@daffa.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>0808-5678-9009</span></p>
                       </div>
